apps/base/drawbridge/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: drawbridge
  labels:
    app: drawbridge
spec:
  replicas: 3
  selector:
    matchLabels:
      app: drawbridge
  template:
    metadata:
      labels:
        app: drawbridge
    spec:
      containers:
      - name: drawbridge
        # image is provided by kustomize
        command: ["drawbridge"]
        args:
        - "--addr=0.0.0.0:8080"
        - "--ca=/data/config/ca.crt"
        - "--cert=/data/tls/tls.crt"
        - "--key=/data/tls/tls.key"
        - "--oidc-issuer=$(OIDC_ISSUER)"
        - "--oidc-audience=$(OIDC_AUDIENCE)"
        - "--store=/data/store"
        ports:
        - containerPort: 8080
        volumeMounts:
        - name: tls-secret
          mountPath: "/data/tls"
          readOnly: true
        - name: config-volume
          mountPath: "/data/config"
          readOnly: true
        - name: store-volume
          mountPath: "/data/store"
        readinessProbe:
          httpGet:
            scheme: HTTPS
            path: /health
            port: 8080
          periodSeconds: 5
          timeoutSeconds: 3
      volumes:
      - name: tls-secret
        secret:
          secretName: drawbridge-tls-cert
          optional: false
      - name: config-volume
        configMap:
          name: drawbridge-config
          items:
          - key: ca.crt
            path: ca.crt
      - name: store-volume
        persistentVolumeClaim:
          claimName: store
