apps/base/drawbridge/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: drawbridge
spec:
  selector:
    app.kubernetes.io/name: MyApp
  ports:
  - protocol: TCP
    port: 8080
    targetPort: 8080
