apps/base/drawbridge/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: drawbridge
  annotations:
    haproxy.org/ssl-passthrough: "true"
    haproxy.org/ssl-redirect: "true"
    haproxy.org/ssl-redirect-code: "301"
spec:
  ingressClassName: haproxy
  rules: []
